add: só Deus sabe